--- a/Gmail-clone-frontend/package.json
+++ b/Gmail-clone-frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "front_end",
+  "name": "gmail-clone",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,11 +14,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
-    "bootstrap": "^5.3.2",
-    "bootstrap-icons": "^1.11.1",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.3",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.9.1",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0",
+    "styled-components": "^6.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
