--- a/Gmail-clone-frontend/package.json
+++ b/Gmail-clone-frontend/package.json
@@ -15,11 +15,16 @@
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.3",
+    "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.6.0",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0",
-    "styled-components": "^6.1.0"
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.18.0",
+    "react-toastify": "^9.1.3",
+    "styled-components": "^6.1.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
